# nanovg-bindings

./: .gitignore  .gitmodules  ChangeLog  LICENSE.txt  README.md  nanovg-bindings.gemspec  nanovg.rb
.github/workflows/: linux.yml  linux_cross.yml  macos.yml  windows.yml
demo/: README.md  convex_hull.rb  convex_partitioning.rb  delaunay.rb  demo_data.rb  divide_by_triangulation.rb  divide_polygon.rb  divide_region.rb  emojifont.rb  example.rb  glfw_build.bat  hex.rb  hex_game_of_life.rb  hex_gol_glider5.rb  hex_renderer.rb  hole_polygon.rb  jpfont.rb  libglfw.3.3.dylib  libnanovg_gl2.dylib  libnanovg_gl3.dylib  mandelbrot.rb  minicircle.rb  mutually_visible_vertices.rb  perf.rb  qrc.rb  showcase.rb  smallest_enclosing_circle.rb  triangle.rb  triangulation.rb  voronoi.rb
demo/data/: emojifont.txt
demo/geom/: segment_intersection.rb
demo/lib/: demo_data.rb  perf.rb
demo/showcase/: scenes.rb
demo/util/: setup_dll.rb  setup_opengl_dll.rb
examples/: emojifont.rb  example.rb  glfw33_build.dylib.sh  hole_polygon.rb  jpfont.rb  qrc.rb  showcase.rb
examples/geom/: convex_partitioning.rb  minicircle.rb
examples/jpfont/: README.md
examples/util/: setup_opengl_dll.rb
lib/: libnanovg_gl2.arm64.dylib  libnanovg_gl2.dylib  libnanovg_gl2.x86_64.dylib  libnanovg_gl3.arm64.dylib  libnanovg_gl3.dylib  libnanovg_gl3.x86_64.dylib  nanovg.rb
nanovg_dll/: README.md  build_gl2_linux.sh  build_gl2_linux_cross.sh  build_gl2_macos.sh  build_gl2_windows.cmd  build_gl3_linux.sh  build_gl3_linux_cross.sh  build_gl3_macos.sh  build_gl3_windows.cmd  nanovg_dll.c  nanovg_dll_build_gl2.sh  nanovg_dll_build_gl3.sh  nanovg_gl2.def  nanovg_gl2_build_windows.bat  nanovg_gl3.def  nanovg_gl3_build_windows.bat  premake4.lua
nanovg_dll/gl2/: CMakeLists.txt
nanovg_dll/gl3/: CMakeLists.txt
script/: gems_build.cmd  gems_build.sh  gems_push.sh
